--- a/src/components/users/users.css
+++ b/src/components/users/users.css
@@ -6,8 +6,9 @@ ul {
   list-style: none;
   padding: 0;
 }
+
 li {
   padding: 5px 10px;
-  background-color: #eeeeee;
-  border: 1px solid #dddddd;
+  background-color: var(--theme-background, #eeeeee);
+  border: 1px solid var(--theme-border, #dddddd);
 }
